<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/splash_screen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.8"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBlackTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="90dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_txt"
        android:layout_marginTop="25dp"
        android:background="@drawable/skin_logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/start_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        android:text="@string/start"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="serif-monospace"
        android:textSize="45sp"/>


    <Button
        android:id="@+id/guest_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_txt"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:text="@string/guest"
        android:fontFamily="serif-monospace"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/button_background"
        />

    <TextView
        android:id="@+id/Login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_btn"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        />


</android.support.constraint.ConstraintLayout>