<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:drawableStart="@drawable/ic_photo_camera"
        android:drawablePadding="20dp"
        android:textAlignment="textStart"
        android:id="@+id/pick_camera_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pick_from_camera"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/pick_gallery_Btn"
        android:drawableStart="@drawable/ic_photo_library"
        android:drawablePadding="20dp"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/pick_camera_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pick_from_gallery"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/delete_photo_Btn"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="20dp"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/pick_gallery_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/remove_image"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>

</android.support.constraint.ConstraintLayout>