<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/splash_screen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.9"
        android:contentDescription="@string/background_image" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBlackTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/camera_btn_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttoncamer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/upload_btn_frag"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text="@string/upload"/>

    <ImageView
        android:id="@+id/img_frag"
        android:layout_width="230dp"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_btn_frag"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/chosen_image" />

    <!--<Button-->
        <!--android:id="@+id/result_btn_frag"-->
        <!--android:drawableStart="@drawable/keyicon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="30dp"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--android:background="@drawable/button_background"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:paddingStart="10dp"-->
        <!--android:paddingEnd="10dp"-->
        <!--android:drawablePadding="14dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/img_frag"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:text="@string/see_result"-->
        <!--/>-->







</android.support.constraint.ConstraintLayout>